# ForensicAPI

./: .gitignore  .sesskey  CLAUDE.md  README.md  STITCHING_LOGIC_AND_TESTING_PLAN.md  main.py  pyproject.toml  run.py  test_pages_ui.py  test_recognizers.py  test_ssn.py  test_valid_ssn.py  utils.py
design_docs/: FUTURE_ENHANCEMENTS.md  PDF_PROCESSING_STRATEGY.md  STITCHING_LOGIC_AND_TESTING_PLAN.md  anonymization_improvements.md  llm_guard_migration.md  llm_guard_migration_summary.md  local_document_processing_plan.md  test_fixtures_update_plan.md
docs/: stateless_anonymization.md
examples/: custom_patterns_demo.py  pseudonymization_demo.py
routes/: anonymization.py  compose_prompt.py  extraction.py  extraction_docling.py  filtering.py  pattern_registry.py  pdf_to_markdown.py  root.py  segmentation.py  test_ui.py
scripts/: add_ids_to_fixtures.py  generate_docling_fixtures.py  generate_test_fixtures.py  regenerate_fixtures.py  setup_anonymization.py
templates/: pdf_test.html  prompt_test.html
test-pages/: monsterui_test.py
tests/: __init__.py  debug_anonymization.py  debug_filter_config.py  diagnose_filters.py  quick_test.py  run_segmentation_tests.py  test_anonymization_security.py  test_anonymization_stateless.py  test_anonymization_synthetic.py  test_basic.py  test_custom_patterns.py  test_extract_endpoint.py  test_extraction_azure.py  test_extraction_comparison.py  test_extraction_docling.py  test_filter_fix.py  test_filtering.py  test_filters_workaround.py  test_integration.py  test_llm_guard_integration.py  test_markdown_anonymization.py  test_pseudonymization.py  test_segmentation.py  test_segmentation_manual.py  test_segmentation_with_real_data.py  test_stitching_logic.py
tests/fixtures/: README.md  minimal_test_document.json
tests/fixtures/academic/: ground_truth_result.json  ground_truth_result_with_ids.json
tests/fixtures_docling/: README.md
tests/fixtures_small/: real_extract_5_pages.json
tests/helpers/: azure_di_test_data.py
tests/test-data/: README.md  anonymization-config.yaml
(+34 files in other folders)
