[project]
name = "2025-06-13-fastapi-reusable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-documentintelligence>=1.0.2",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
    "python-fasthtml>=0.12.19",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = []
