[project]
name = "2025-06-13-fastapi-reusable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "azure-ai-documentintelligence>=1.0.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "logging>=0.4.9.6",
    "psutil>=7.0.0",
    "pypdf>=5.6.0",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.3",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "faker>=20.1.0",
    "pip>=25.1.1",
    "python-dateutil>=2.9.0.post0",
    "llm-guard>=0.3.16",
]

[dependency-groups]
dev = [
    "reportlab>=4.4.2",
]
